@@ -1,23 +1,24 @@
 <?php
 
-	$english = array(
-		'advanced_notifications:cli:error:secret' => "The provided secret is invalid",
-		'advanced_notifications:cli:error:type' => "The provided type isn't supported",
-		
-		'advanced_notifications:settings:replace_site_notifications' => "Do you wish to replace system notifications, that normally end up in the messages plugin, with a personalized activity page (based on notifications settings)?",
-		'advanced_notifications:settings:no_mail_content' => "Do you want to replace the content notification bodies with a just a link to the content?",
-		
-		'advanced_notifications:activity:groups' => "My Groups",
-		'advanced_notifications:activity:groups:title' => "Activity in my groups",
-		'advanced_notifications:activity:groups:info' => "Activity in groups I'm member of",
-		'advanced_notifications:activity:notifications' => "Personalized",
-		'advanced_notifications:activity:notifications:title' => "Personalized activity",
-		'advanced_notifications:activity:notifications:info' => "Activity based on my notification settings",
-		
-		'advanced_notifications:discussion:reply:subject' => "New group discussion reply",
-		
-		'advanced_notifications:notification:email:body' => "To view the content click here
-%s",
-	);
+$english = array(
+	'advanced_notifications:cli:error:secret' => "The provided secret is invalid",
+	'advanced_notifications:cli:error:type' => "The provided type isn't supported",
 	
-	add_translation("en", $english);
+	'advanced_notifications:settings:replace_site_notifications' => "Do you wish to replace system notifications, that normally end up in the messages plugin, with a personalized activity page (based on notifications settings)?",
+	'advanced_notifications:settings:no_mail_content' => "Do you want to replace the content notification bodies with a just a link to the content?",
+	
+	'advanced_notifications:activity:groups' => "My Groups",
+	'advanced_notifications:activity:groups:title' => "Activity in my groups",
+	'advanced_notifications:activity:groups:info' => "Activity in groups I'm member of",
+	'advanced_notifications:activity:notifications' => "Personalized",
+	'advanced_notifications:activity:notifications:title' => "Personalized activity",
+	'advanced_notifications:activity:notifications:info' => "Activity based on my notification settings",
+	
+	'advanced_notifications:discussion:create:subject' => "New group discussion %s",
+	'advanced_notifications:discussion:reply:subject' => "New group discussion reply %s",
+	
+	'advanced_notifications:notification:email:body' => "To view the content click here
+%s",
+);
+
+add_translation("en", $english);
