@@ -2,7 +2,9 @@
 
 x.x:
 
+- applied coding standards
 - added: support for TidyPics notifications
+- added: discussion title in notifications
 
 1.3 (2013-10-31):
 
